add css animation

--- a/index.html
+++ b/index.html
@@ -11,8 +11,56 @@
     <h1>Example 8</h1>
     <hr />
 
-    <div class="container">
+    <!-- <div class="container">
       <a href="#">Hover Me!</a>
-    </div>
+    </div> -->
+
+    <ul>
+      <li>
+        <a href="#">
+          Home
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          About
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          Services
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          Team
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          Contact
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </a>
+      </li>
+    </ul>
   </body>
 </html>
